welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.code
def monkeyTrouble(aSmile:Boolean, bSmile:Boolean): Boolean = {
	if (aSmile){
		if(bSmile){
			return true ;
		}else{
			return false;
		}
	}
	if (bSmile == false){
		if (aSmile){
			return false;
		}else{
			return true;
		}
	}
}
